# PulseAudio_TCP_Reciever

./: .gitmodules  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/net/madnation/pulseaudio/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioNet.cpp  AudioNet.h  NativeAudio.cpp  NativeAudio.h  NativeAudioCallback.h  circular_buffer.h  native-lib.cpp
app/src/main/java/net/madnation/pulseaudio/: MainActivity.java  NativeLibs.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/net/madnation/pulseaudio/: ExampleUnitTest.java
